--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <div class="before"></div>
 <div class="after"></div>
 </div>
-<h1>from JXB</h1>
-<h2>Happy Birthday PYS!</h2>
+<h1>Happy Birthday PYS!</h1>
+<h2>生日快乐！</h2>
 <span>🎉</span>
 <div class="candle">
 <div id="flame" class="lit"></div>
